--- a/01_radio/package.json
+++ b/01_radio/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npx gulp",
+    "build": "npx gulp build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
